--- a/src/component/calendar/index.scss
+++ b/src/component/calendar/index.scss
@@ -32,32 +32,33 @@
         > div.heart {
           width: 50%;
           height: 50%;
-          background: var(--theme-color); /* 💗 진한 테마색으로 변경 */
+          background: var(--theme-color);
           top: 35%;
           left: 25%;
           position: absolute;
           transform: rotate(45deg);
           z-index: 0;
 
-          &::before {
-            content: "";
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: -50%;
-            left: 0%;
-            border-radius: 50%;
-            background: var(--theme-color); /* 💗 동일하게 적용 */
-          }
+          /* 💓 두근두근 애니메이션 */
+          animation: heartbeat 1.5s ease-in-out infinite;
 
+          &::before,
           &::after {
             content: "";
             width: 100%;
             height: 100%;
             position: absolute;
-            left: -50%;
             border-radius: 50%;
-            background: var(--theme-color); /* 💗 동일하게 적용 */
+            background: var(--theme-color);
+          }
+
+          &::before {
+            top: -50%;
+            left: 0;
+          }
+
+          &::after {
+            left: -50%;
           }
         }
       }
@@ -100,5 +101,15 @@
         color: var(--theme-color);
       }
     }
+  }
+}
+
+/* 💗 하트 두근두근 효과 정의 */
+@keyframes heartbeat {
+  0%, 20%, 40%, 60%, 80%, 100% {
+    transform: rotate(45deg) scale(1);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: rotate(45deg) scale(1.15);
   }
 }
