--- a/src/component/modal/index.scss
+++ b/src/component/modal/index.scss
@@ -33,14 +33,17 @@
       padding: 0.5rem;
       background-color: var(--light-color);
       z-index: 7;
+
       .close-button-wrapper {
         display: flex;
         justify-content: flex-end;
+
         .close-button {
           position: relative;
           z-index: 3;
           width: 1rem;
           height: 1rem;
+
           &::before {
             content: "";
             width: 0.1rem;
@@ -51,6 +54,7 @@
             top: 0;
             left: 50%;
           }
+
           &::after {
             content: "";
             width: 0.1rem;
@@ -64,6 +68,7 @@
         }
       }
     }
+
     .content {
       max-height: 80vh;
       overflow: auto;
@@ -71,13 +76,13 @@
   }
 }
 
-
-/* 🔧 모달 내부 아이콘 크기 고정 */
+/* 🔧 모달 내부 아이콘 크기 및 정렬 수정 */
 .modal svg,
 .modal i {
   width: 1em !important;
   height: 1em !important;
   flex-shrink: 0;
-  vertical-align: middle;
-  display: inline-block;
+  display: inline; /* ✅ 텍스트와 한 줄 정렬 */
+  vertical-align: middle; /* ✅ 세로 정렬 자연스럽게 */
+  margin-right: 0.3em; /* ✅ 글자와 간격 확보 */
 }
